--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
-language-tool-python
-nltk
-pillow
-psutil
-torch
-transformers
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+filelock==3.16.1
+fsspec==2024.9.0
+huggingface-hub==0.25.2
+idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
+language_tool_python==2.8.1
+MarkupSafe==3.0.1
+mpmath==1.3.0
+networkx==3.4.1
+nltk==3.9.1
+numpy==2.1.2
+packaging==24.1
+pillow==11.0.0
+psutil==6.1.0
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+safetensors==0.4.5
+setuptools==75.2.0
+sympy==1.13.1
+tokenizers==0.19.0
+torch==2.5.0
+tqdm==4.66.5
+transformers==4.43.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+wheel==0.44.0
