--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,34 @@
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-filelock==3.16.1
-fsspec==2024.9.0
-huggingface-hub==0.25.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+filelock==3.18.0
+fsspec==2025.5.1
+hf-xet==1.1.3
+huggingface-hub==0.32.4
 idna==3.10
 Jinja2==3.1.6
-joblib==1.4.2
-language_tool_python==2.8.1
-MarkupSafe==3.0.1
+joblib==1.5.1
+language_tool_python==2.9.4
+MarkupSafe==3.0.2
 mpmath==1.3.0
-networkx==3.4.1
+networkx==3.5
 nltk==3.9.1
-numpy==2.1.2
-packaging==24.1
-pillow==11.0.0
-psutil==6.1.0
+numpy==2.3.0
+packaging==25.0
+pillow==11.2.1
+psutil==7.0.0
 PyYAML==6.0.2
-regex==2024.9.11
-requests==2.32.3
-safetensors==0.4.5
-setuptools==75.2.0
-sympy==1.13.1
-tokenizers==0.19.0
-torch==2.5.0
-tqdm==4.66.5
-transformers==4.48.0
-typing_extensions==4.12.2
-urllib3==2.2.3
-wheel==0.44.0
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+setuptools==80.9.0
+sympy==1.14.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+transformers==4.52.4
+typing_extensions==4.14.0
+urllib3==2.4.0
