--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,35 @@
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-filelock==3.18.0
-fsspec==2025.5.1
-hf-xet==1.1.5
-huggingface-hub==0.33.4
-idna==3.10
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+filelock==3.20.0
+fsspec==2025.9.0
+hf-xet==1.1.10
+huggingface-hub==0.35.3
+idna==3.11
 Jinja2==3.1.6
-joblib==1.5.1
+joblib==1.5.2
 language_tool_python==2.9.4
-MarkupSafe==3.0.2
+MarkupSafe==3.0.3
 mpmath==1.3.0
 networkx==3.5
-nltk==3.9.1
-numpy==2.3.1
+nltk==3.9.2
+numpy==2.3.4
 packaging==25.0
-pillow==11.3.0
-psutil==7.0.0
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.4
-safetensors==0.5.3
+pillow==12.0.0
+pip-review==1.3.0
+psutil==7.1.1
+PyYAML==6.0.3
+regex==2025.10.23
+requests==2.32.5
+safetensors==0.6.2
 setuptools==80.9.0
 sympy==1.14.0
-tokenizers==0.21.2
+tokenizers==0.22.1
 toml==0.10.2
-torch==2.8.0
-torchaudio==2.7.1
-torchvision==0.22.1
+torch==2.9.0
+torchaudio==2.9.0
+torchvision==0.24.0
 tqdm==4.67.1
-transformers==4.53.2
-typing_extensions==4.14.0
-urllib3==2.4.0
+transformers==4.57.1
+typing_extensions==4.15.0
+urllib3==2.5.0
